[v 1.2] небольшие изменения